# gkide

./: .gitattributes  .gitcommitstyle  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
cmake/: BasicBuildingInfo.cmake  CheckBuildArch.cmake  CheckBuildingEnv.cmake  CheckHostEndianType.c.in  CheckHostEndianType.cmake  CheckLuaProg.cmake  ConfigNvim.cmake  ConfigSnail.cmake  DistInfo.in  FindIconv.cmake  FindJeMalloc.cmake  FindLibIntl.cmake  FindLibTermkey.cmake  FindLibUV.cmake  FindLibVterm.cmake  FindLibssh.cmake  FindLua.cmake  FindMsgpack.cmake  FindStaticQt3rdLib.cmake  FindStaticQtLib.cmake  FindUnibilium.cmake  GetCompileFlags.cmake  GetGitRepositoryInfo.cmake  GetGitRepositoryInfo.cmake.in  InstallHelpers.cmake  LibFindMacros.cmake  PackageInfo.in  PreventInTreeBuilds.cmake  ReleasePackage.cmake  RunNvimTests.cmake  config.lua.in
contrib/: BuildInstall.md  GettextDiagram  GitCommitStyle.md  GitConfig.md  TODO.md  git.config  gitconfig.md  local.mk.eg  mingw-w64.eg
docs/: EnvList.md
license/: README.nvim
licenses/: README.md
source/: CMakeLists.txt
source/config/: CMakeLists.txt  buildinfo.h.in  config.h.in  confignvim.h.in  configsnail.h.in  envdefs.h.in  gkideenvs.h.in  gkideversion.h.in  miscinfo.h.in  pathdef.h.in  srcinfo.h.in  versiondef.h.in
source/config/doxygen/: Doxyfile.in
source/config/nvimapi/: CMakeLists.txt
source/config/nvimapi/auto/: NvimApiFuncID.c  func_idx.h  func_sig.hpp  nvim.cpp  nvim.h  nvimAPIs.c
source/config/nvimapi/bindings/: NvimApiFuncID.c  func_idx.h  nvim.cpp  nvim.h  nvimAPIs.c  nvimbindings.py
source/nvim/: CMakeLists.txt  arabic.c  arabic.h  argitem.c  argitem.h  ascii.h  assert.h  buffer.c  buffer.h  buffer_defs.h  bufhl_defs.h  charset.c  charset.h  cmd_line_args.c  cmd_line_args.h  cursor.c  cursor.h  cursor_shape.c  cursor_shape.h  diff.c  diff.h  digraph.c  digraph.h  edit.c  edit.h  error.h  eval.c  eval.h  ex_cmds.c  ex_cmds.h  ex_cmds.lua  ex_cmds2.c  ex_cmds2.h  ex_cmds_defs.h  ex_docmd.c  ex_docmd.h  ex_eval.c  ex_eval.h  ex_getln.c  ex_getln.h  (+129 more)
source/nvim/api/: buffer.c  buffer.h  dispatch_deprecated.lua  nvim.c  nvim.h  tabpage.c  tabpage.h  ui.c  ui.h  ui_events.in.h  vim.c  vim.h  window.c  window.h
source/nvim/api/private/: defs.h  dispatch.c  dispatch.h  handle.c  handle.h  helpers.c  helpers.h
source/nvim/config/: CMakeLists.txt  confignvim.h.in
source/nvim/config/doxygen/: CMakeLists.txt  Doxyfile.in
source/nvim/eval/: decode.c  decode.h  encode.c  encode.h  executor.c  executor.h  gc.c  gc.h  typval.c  typval.h  typval_encode.c.h  typval_encode.h
source/nvim/event/: defs.h  libuv_process.c  libuv_process.h  loop.c  loop.h  multiqueue.c  multiqueue.h  process.c  process.h  rstream.c  rstream.h  signal.c  signal.h  socket.c  socket.h  stream.c  stream.h  time.c  time.h  wstream.c  wstream.h
source/nvim/generators/: c_grammar.lua  dump_bin_array.lua  gen_api_dispatch.lua  gen_api_ui_events.lua  gen_char_blob.lua  gen_eval.lua  gen_events.lua  gen_ex_cmds.lua  gen_header.lua  gen_options.lua  gen_unicode_tables.lua
source/nvim/lib/: khash.h  klist.h  kvec.h  queue.h  ringbuf.h
source/nvim/lua/: converter.c  converter.h  executor.c  executor.h
source/nvim/msgpack/: channel.c  channel.h  helpers.c  helpers.h  server.c  server.h
source/nvim/os/: dl.c  dl.h  env.c  fileio.c  fileio.h  fs.c  fs_defs.h  input.c  input.h  mem.c  os.h  os_defs.h  pty_process.h  pty_process_unix.c  pty_process_unix.h  pty_process_win.h  shell.c  shell.h  signal.c  signal.h  std_path.c  std_path.h  stdpaths.c  stdpaths_defs.h  time.c  time.h  unix_defs.h  users.c  win_defs.h
source/nvim/tui/: input.c  input.h  tui.c  tui.h
source/plugins/: CMakeLists.txt
source/plugins/etc/: config.nvimrc  config.nvl  sysinit.nvimrc
source/snail/: CMakeLists.txt
source/snail/app/: CMakeLists.txt  attributes.h  envdefs.h  main.cpp  snail.qrc  snail.rc  version.h
source/snail/libs/: CMakeLists.txt
source/snail/libs/nvimapi/: CMakeLists.txt  function.cpp  function.h  msgpackiodevice.cpp  msgpackrequest.cpp  msgpackrequest.h  neovimconnector.cpp  neovimconnector.h  neovimconnectorhelper.cpp  neovimconnectorhelper.h  stdinreader.cpp  util.cpp  util.h
source/snail/libs/nvimapi/auto/: func_idx.h  func_sig.hpp  nvim.cpp  nvim.h
source/snail/libs/nvimapi/bindings/: nvim.cpp  nvim.h  nvimbindings.py
source/snail/libs/nvimcore/: CMakeLists.txt  app.cpp  app.h  cell.h  envdefs.h  errorwidget.cpp  errorwidget.h  function.cpp  function.h  helpers.cpp  helpers.h  input.cpp  input.h  konsole_wcwidth.cpp  konsole_wcwidth.h  logmanager.cpp  logmanager.h  mainwindow.cpp  mainwindow.h  msgpackiodevice.cpp  msgpackiodevice.h  msgpackrequest.cpp  msgpackrequest.h  nvimconnector.cpp  nvimconnector.h  nvimconnectorhelper.cpp  nvimconnectorhelper.h  shell.cpp  shell.h  shellcontents.cpp  shellcontents.h  shellwidget.cpp  shellwidget.h  stdinreader.cpp  stdinreader.h  util.cpp  util.h
source/snail/libs/nvimcore/auto/: func_idx.h  nvim.cpp  nvim.h
source/snail/libs/nvimcore/bindings/: README  func_idx.h  func_sig.hpp  nvim.cpp  nvim.h
source/snail/libs/nvimgui/: CMakeLists.txt  app.cpp  cell.h  errorwidget.cpp  helpers.cpp  helpers.h  input.cpp  konsole_wcwidth.cpp  mainwindow.cpp  mainwindow.h  shell.cpp  shell.h  shellcontents.cpp  shellcontents.h  shellwidget.cpp  shellwidget.h
source/snail/libs/nvimgui/usage/: example1.cpp
source/snail/libs/qtshell/: CMakeLists.txt
source/snail/libs/qtshell/usage/: example2.cpp  example3.cpp  example4.cpp
test/nvim/: CMakeLists.txt  OutputHandlers.lua  globalhelper.lua
test/nvim/config/: CMakeLists.txt  paths.lua.in
test/nvim/config/fixtures/: CMakeLists.txt  printargs-test.c  shell-test.c
test/nvim/functional/: CMakeLists.txt  helper.lua  preload.lua
test/nvim/functional/api/: buffer_spec.lua  keymap_spec.lua  server_notifications_spec.lua  tabpage_spec.lua  window_spec.lua
test/snail/libs/nvimgui/: CMakeLists.txt  bench_scroll.cpp  test_cell.cpp
test/snail/libs/qtshell/: CMakeLists.txt  bench_cell.cpp  test_shellcontents.cpp  test_shellwidget.cpp
(+76 files in other folders)
